<resources>
    <string name="app_name">SA Test</string>
    <string name="textview3">TextView</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="pw">輸入密碼</string>
    <string name="un">輸入帳號</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="e_mail">e-mail</string>
    <string name="confirn_password">Confirn password</string>
    <string name="email">輸入信箱</string>
    <string name="register">register</string>
    <string name="註冊">註冊</string>
    <string name="login">Login</string>
    <string name="title_activity_front">Front</string>
    <string name="title_home">Home</string>
    <string name="title_account">account</string>
    <string name="title_upload">upload</string>
    <string name="Upload">upload</string>
    <string name="account">Account</string>
    <string name="upload">Upload</string>
    <string name="back">返回</string>
    <string name="load">上傳</string>
    <string name="choose_p">選擇圖片</string>
    <string name="open">公開</string>
    <string name="textview1">TextView</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
