<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="549dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="276dp"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Username"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp"
                android:text="@string/username"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/e-mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp"
                android:text="@string/e_mail"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp"
                android:text="@string/password"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirn_password"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="538dp"
            android:gravity="center|start"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Username_input"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp"
                android:autofillHints="@string/username"
                android:hint="@string/un"
                android:inputType="" />

            <EditText
                android:id="@+id/Email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35sp"
                android:autofillHints="@string/username"
                android:hint="@string/email"
                android:inputType="" />

            <EditText
                android:id="@+id/Password_input"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35sp"
                android:autofillHints="@string/password"
                android:hint="@string/pw"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35sp"
                android:autofillHints="@string/password"
                android:hint="@string/pw"
                android:inputType="textPassword" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />


</LinearLayout>